Fixed issue #825: Mettre les logos facebook et twitter visibles sur la barre bleue en haut

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -75,6 +75,9 @@ footer #about-link a:hover {
   footer #about-link a {
     font-size: 18px;
   }
+  header #logo-header {
+    display: none;
+  }
 }
 
 .twitter-follow-button{
